--- a/views/contact.erb
+++ b/views/contact.erb
@@ -11,17 +11,17 @@
     <li><%= email.location_name() %>: <%= email.email() %></li>
   <% end %>
 </ul>
-<form action="/contacts/<% @contact.id() %>/email/new">
+<form action="/contact/<%= @contact.id() %>/email/new">
   <button type="submit">Add Email</button>
 </form>
 
 <h2>Phone Number</h2>
 <ul>
   <% @phone_numbers.each do |phone_number| %>
-    <li><%= phone_number.location_name() %>: <%= phone_number.number() %> (ext <%= phone_number.ext()) %></li>
+    <li><%= phone_number.location_name() %>: <%= phone_number.number() %> (ext <%= phone_number.ext() %>)</li>
   <% end %>
 </ul>
-<form action="/contacts/<% @contact.id() %>/phone_number/new">
+<form action="/contact/<%= @contact.id() %>/phone_number/new">
   <button type="submit">Add Phone Number</button>
 </form>
 
@@ -33,6 +33,8 @@
     <li><%= address.city() %>, <%= address.state() %> <%= address.zip_code() %></li>
   <% end %>
 </ul>
-<form action="/contacts/<% @contact.id() %>/address/new">
+<form action="/contact/<%= @contact.id() %>/address/new">
   <button type="submit">Add Address</button>
 </form>
+<br>
+<a href='/'>Return to Contacts</a>
