--- a/views/contact_form.erb
+++ b/views/contact_form.erb
@@ -1,7 +1,6 @@
 <h1>Add a Contact</h1>
 
-<form action="/contact_form" method="post">
-
+<form action="/contact_add" method="post">
   <label for="first_name">First Name</label>
   <input type="text" name="first_name" id="first_name">
 
